--- a/exercises/index.html
+++ b/exercises/index.html
@@ -10,6 +10,12 @@
     <a href="/exercises/">Go Back</a>
     <h1>Index</h1>
 
-    <a href="./closures.html">2. Closures</a>
+    <div>
+      <a href="./closures.html">2. Closures</a>
+    </div>
+
+    <div>
+      <a href="./this.html">3. this</a>
+    </div>
   </body>
 </html>
