commit: Los métodos call, apply y bind

--- a/exercises/index.html
+++ b/exercises/index.html
@@ -17,5 +17,12 @@
     <div>
       <a href="./this.html">3. this</a>
     </div>
+
+    <div>
+      <a href="./call-apply-bind.html"
+        >4. Function.prtotype.call.function.prototype.apply and
+        functio.prototype.bind</a
+      >
+    </div>
   </body>
 </html>
