commit: Herencia Prototipal y prototipos

--- a/exercises/index.html
+++ b/exercises/index.html
@@ -24,5 +24,13 @@
         functio.prototype.bind</a
       >
     </div>
+
+    <div>
+      <a href="./prototype.html"> 5. prototype</a>
+    </div>
+
+    <div>
+      <a href="./prototypal-inheritance.html">6. Herencia Prototipal</a>
+    </div>
   </body>
 </html>
