--- a/exercises/index.html
+++ b/exercises/index.html
@@ -32,5 +32,9 @@
     <div>
       <a href="./prototypal-inheritance.html">6. Herencia Prototipal</a>
     </div>
+
+    <div>
+      <a href="./promises.html">7. Promises.html</a>
+    </div>
   </body>
 </html>
